istio-canary/web-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
      version: website-version-2
  template:
    metadata:
      labels:
        app: website
        version: website-version-2
    spec:
      containers:
      - name: website-version-2
        image: kublr/kublr-tutorial-images:v2
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
